--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -29,10 +29,10 @@
   .form
     %form.form__all
       .input-box
-        %input{:placeholder => "Type a message", :type => "text", class:"form__typein"}
-        %label{class:"icon__image"}
+        %input{:placeholder => "Type a message", :type => "text", class:"input-box__formtypein"}
+        %label{class:"input-box__iconimage"}
           = icon('fas', 'image')
-          %input{type: "file", class:"file__image"}
-      %input{ :type => "submit", :value => "Send", class:"form__btn"}
+          %input{type: "file", class:"input-box__iconimage--fileimage"}
+      %input{ type: "submit", :value => "Send", class:"formbtn"}
       
 
