--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -3,9 +3,9 @@
     .sidebar__username--item
       .sidebar__username--item--left masa
       .sidebar__username--item--right 
-        = link_to "#", class: "sidebar__btn sidebar__btn--editing" do
+        = link_to "#", class: "sidebar__btn--editing" do
           = icon('far', 'edit')
-        = link_to "#", class: "sidebar__btn" do
+        = link_to "#", class: "sidebar__btn--setting" do
           = icon('fas', 'cog')
   .sidebar__grouplist
     .sidebar__grouplist--item
