--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -5,25 +5,17 @@
         = current_user.name
       .sidebar__username--item--left masa
       .sidebar__username--item--right 
-        = link_to "#", class: "sidebar__btn--editing" do
+        = link_to new_group_path, class: "sidebar__btn--editing" do
           = icon('far', 'edit')
         = link_to edit_user_path(current_user), class: "sidebar__btn--setting" do
           = icon('fas', 'cog')
 
 
   .sidebar__grouplist
-    .sidebar__grouplist--item
-      .sidebar__grouplist--item--groupname techcamp
-      .sidebar__grouplist--item--message まだメッセージがありません
-    .sidebar__grouplist--item
-      .sidebar__grouplist--item--groupname techcamp
-      .sidebar__grouplist--item--message まだメッセージがありません
-    .sidebar__grouplist--item
-      .sidebar__grouplist--item--groupname techcamp
-      .sidebar__grouplist--item--message まだメッセージがありません
-    .sidebar__grouplist--item
-      .sidebar__grouplist--item--groupname techcamp
-      .sidebar__grouplist--item--message まだメッセージがありません
-    
-
-        
+    - current_user.groups.each do |group|
+      .sidebar__grouplist--item
+        = link_to '#' do
+          .sidebar__grouplist--item--groupname
+            = group.name
+          .sidebar__grouplist--item--message 
+            メッセージはまだありません
