--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -1,38 +1,25 @@
 .mainchat
   .mainchat__groupinfo
     .mainchat__groupinfo--left
-      .mainchat__groupinfo--left--top test
-      .mainchat__groupinfo--left--bottom Member : masa
+      .mainchat__groupinfo--left--top 
+        =@group.name
+      .mainchat__groupinfo--left--bottom 
+        Member:
+        - @group.users.each do |user|
+          =user.name
     .mainchat__groupinfo--right  
       .mainchat__groupinfo--right--in
-        = link_to "#", class: "mainchat__btn" do 
+        = link_to edit_group_path(@group), class: "mainchat__btn" do 
           Edit
+
   .mainchat__messagelist
-    .mainchat__messagelist--box
-      .mainchat__messagelist--box--name
-        .mmainchat__messagelist--box--name--name masa
-        .mainchat__messagelist--box--name--date 2020/6/24(Wed)0:57:48
-      .mainchat__messagelist--box--message Hi
-      .mainchat__messagelist--box--name
-        .mmainchat__messagelist--box--name--name masa
-        .mainchat__messagelist--box--name--date 2020/6/24(Wed)0:57:48
-      .mainchat__messagelist--box--message Hi
-      .mainchat__messagelist--box--name
-        .mmainchat__messagelist--box--name--name masa
-        .mainchat__messagelist--box--name--date 2020/6/24(Wed)0:57:48
-      .mainchat__messagelist--box--message Hi
-      .mainchat__messagelist--box--name
-        .mmainchat__messagelist--box--name--name masa
-        .mainchat__messagelist--box--name--date 2020/6/24(Wed)0:57:48
-      .mainchat__messagelist--box--message Hi
+    = render @messages
     
   .form
-    %form.form__all
+    = form_with model: [@group, @message], html: {class: "form_all"}, local: true do |f|
       .input-box
-        %input{:placeholder => "Type a message", :type => "text", class:"input-box__formtypein"}
-        %label{class:"input-box__iconimage"}
+        = f.text_field :content, class: 'input-box__formtypein', placeholder: 'type a message'
+        = f.label :image, class: 'input-box__iconimage' do
           = icon('fas', 'image')
-          %input{type: "file", class:"input-box__iconimage--fileimage"}
-      %input{ type: "submit", :value => "Send", class:"formbtn"}
-      
-
+          = f.file_field :image, class: 'input-box__iconimage--fileimage'
+      = f.submit 'Send', class: 'formbtn'
