--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -14,8 +14,8 @@
   .sidebar__grouplist
     - current_user.groups.each do |group|
       .sidebar__grouplist--item
-        = link_to '#' do
+        = link_to group_messages_path(group) do
           .sidebar__grouplist--item--groupname
             = group.name
           .sidebar__grouplist--item--message 
-            メッセージはまだありません
+            = group.show_last_message
