--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -1,7 +1,7 @@
 .mainchat
   .mainchat__groupinfo
     .mainchat__groupinfo--left
-      .mainchat__groupinfo--left--top 
+      .mainchat__groupinfo--left--top{"data-group-index": @group.id} 
         =@group.name
       .mainchat__groupinfo--left--bottom 
         Member:
