--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -3,7 +3,7 @@
     = message.user.name
   .mainchat__messagelist--box--date
     = message.created_at.strftime("%Y年%m月%d日 %H時%M分")
-.mainchat__messagelist--message
+.mainchat__messagelist--message{data: {message: {id: message.id}}}
   - if message.content.present?
     %p.mainchat__messagelist--message--content
       = message.content
