Revert "Merge pull request #11 from kohkoh22/ajax-auto-function"
This reverts commit 45c48575946c8691301bebfed2ac4ef42182ecbf, reversing
changes made to ecfdf40476de16b2d5f9c04608a7e3d7e58b92a3.

--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -1,7 +1,7 @@
 .mainchat
   .mainchat__groupinfo
     .mainchat__groupinfo--left
-      .mainchat__groupinfo--left--top{"data-group-index": @group.id} 
+      .mainchat__groupinfo--left--top 
         =@group.name
       .mainchat__groupinfo--left--bottom 
         Member:
