--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -3,7 +3,7 @@
     .sidebar__username--item
       %h3.sidebar__username--item--username
         = current_user.name
-      .sidebar__username--item--left masa
+      .sidebar__username--item--left 
       .sidebar__username--item--right 
         = link_to new_group_path, class: "sidebar__btn--editing" do
           = icon('far', 'edit')
